# conferences

./: .gitignore  README.md  index.html  pyproject.toml
assets/: app.js  styles.css
building-mirror-of-erised/: readme.md
designing-memory/: readme.md
examples/: quickstart.py
how-shazam-identifies-songs/: readme.md
llm-based-recommendation-systems/: readme.md
measuring-experiments-in-llms/: readme.md
src/memory/: __init__.py  records.py  retrieval.py  store.py
tests/: test_safety.py  test_supersedes.py  test_temporal.py
the-master-algorithm/: readme.md
